# PianoTutor

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitmapFont.c  links.txt  livePlot.gp  livePlot.py  makeShaders.c
Assets/: assets.blend  assets.json  export.py  exportNames.py  glyphs.json  listGlyphs.sh
Assets/Fonts/: emmentaler-20.otf.xml  emmentaler-brace.otf.xml
src/: \  bitmap.raw  color.h  compute.c  compute.h  computeBeam.c  computeFunc.c  graphics.c  graphics.h  helpers.c  helpers.h  inputParser.c  inputParser.h  interface.h  main.c  midiDevice.c  midiDevice.h  midiParser.c  midiParser.h  notes.c  notes.h  piano.c  piano.h  pianoComputeItems.h  pianoDraw.c  pianoFunc.c  pianoMeshes.c  pianoMeshes.h  pianoTypes.h  plot.c  plot.h  shader.c  shader.h  shaders.h  sheets.c  sheets.h  text.c  text.h  vector.c  vector.h  (+8 more)
src/Old/: graphics.c  graphics.h  midiDevice.h  midiParser.c  midiParser.h  midiPiano.c  midiPiano.h  notes.c  notes.h  sheets.c  sheets.h  singlyLinkedList.c  singlyLinkedList.h  window.c
src/Shaders/: fragmentShader.frag  fragmentTextShader.frag  textureFragmentShader.frag  textureVertexShader.vert  vertexShader.vert  vertexTextShader.vert
